--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,31 @@
+* {
+    box-sizing: border-box;
+}
+
 #header {
     width:50%;
     text-align:center;
-    margin:20px auto;
+    margin:0 auto 20px auto;
+    padding-top:20px;
     font-size: 3em;
     font-weight: bold;
 }
 
+body {
+    position:relative;
+    width:100%;
+    height:100%;
+    margin:0;
+}
+
 #game {
+    z-index:0;
     display:grid;
     padding-left:100px;
     grid-template-columns: 1fr 1fr 1fr;
     width:50%;
     margin:0 auto;
+    background-color: white;
 }
 
 .tiles {
@@ -20,75 +34,88 @@
     height:200px;
     background-color:blue;
     margin-bottom: 50px;
-
 }
 
 #tiles1 {
-    grid-row:1;
-    grid-column-start: 1;
-    grid-row-start:1;
+    grid-area: 1/1/1/1
 }
 
 #tiles2 {
-    grid-column-start: 2;
-    grid-row-start:1;
+    grid-area: 1/2/1/2
 }
 
 #tiles3 {
-    grid-column-start: 3;
-    grid-row-start:1;
+    grid-area: 1/3/1/3
 }
 
 #tiles4 {
-    grid-column-start: 4;
-    grid-row-start:2;
+    grid-area: 2/1/2/1
 }
 
 #tiles5 {
-    grid-column-start: 5;
-    grid-row-start:2;
+    grid-area: 2/2/2/2
 }
 
 #tiles6 {
-    grid-column-start: 6;
-    grid-row-start:2;
+    grid-area: 2/3/2/3
 }
 
 .otherTiles {
+    z-index:1;
     width: 200px;
     height:200px;
     margin-bottom: 50px;
-    border:1px solid black;
+}
+
+img {
+    width: 200px;
+    height:200px;
+    object-fit: fill;
 }
 
 #otherTiles1 {
-    grid-column-start: 1;
-    grid-row-start:1;
+    grid-area: 1/1/1/1
 }
 
 #otherTiles2 {
-    grid-column-start: 2;
-    grid-row-start:1;
+    grid-area: 1/2/1/2
 }
 
 #otherTiles3 {
-    grid-column-start: 3;
-    grid-row-start:1;
+    grid-area: 1/3/1/3
 }
 
 #otherTiles4 {
-    grid-column-start: 4;
-    grid-row-start:2;
+    grid-area: 2/1/2/1
 }
 
 #otherTiles5 {
-    grid-column-start: 5;
-    grid-row-start:2;
+    grid-area: 2/2/2/2
 }
 
 #otherTiles6 {
-    grid-column-start: 6;
-    grid-row-start:2;
+    grid-area: 2/3/2/3
+}
+
+#modal {
+    display:none;
+    position:fixed;
+    z-index:3;
+    width:100%;
+    height:100%;
+    margin:0;
+    background-color:rgba(0,0,0, 0.4);
+}
+
+#modalContent {
+    color:red;
+    font-size:4em;
+    text-align:center;
+    background-color:white;
+    width:100px;
+    height:100px;
+    padding-top:10px;
+    margin:200px auto;
 }
 
 #scoreHeader {
